--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -18,12 +18,12 @@ services:
       - key: JWT_EXPIRE
         value: 7d
       - key: CORS_ORIGINS
-        value: https://mamacare-admin.onrender.com,https://localhost:3000
+        value: https://mama-care-g7y1.onrender.com,https://mamacare-admin.onrender.com,https://localhost:3000,http://localhost:3000,https://localhost:5173,http://localhost:5173
       - key: MAX_FILE_SIZE
         value: 10485760
       - key: UPLOAD_PATH
         value: uploads/
-      - key: RATE_LIMIT_WINDOW
-        value: 15
-      - key: RATE_LIMIT_MAX
-        value: 100
+      - key: RATE_LIMIT_WINDOW_MS
+        value: 900000
+      - key: RATE_LIMIT_MAX_REQUESTS
+        value: 200
