fix: Update CORS configuration for development and production environments
- Enhanced CORS origins for local development to include Vite and Expo servers
- Updated production CORS origins to include Vercel frontend domains
- Improved CORS middleware to handle preflight requests and logging
- Added test scripts for validating CORS setup in both local and production environments
- Updated deployment scripts to reflect new CORS configurations

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -26,7 +26,7 @@ EMAIL_FROM=MamaCare <noreply@mamacare.com>
 
 # CORS Configuration (Development - Permissive)
 # Allow all localhost and local network access for mobile app development
-CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:8081,http://127.0.0.1:3000,http://127.0.0.1:8081,http://10.0.2.2:3000,http://192.168.0.49:3000,http://192.168.0.49:8081,https://localhost:3000,https://127.0.0.1:3000
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:8081,http://127.0.0.1:3000,http://127.0.0.1:5173,http://127.0.0.1:8081,http://10.0.2.2:3000,http://10.0.2.2:5173,http://192.168.0.49:3000,http://192.168.0.49:5173,http://192.168.0.49:8081,https://localhost:3000,https://localhost:5173,https://127.0.0.1:3000,https://127.0.0.1:5173
 
 # Rate Limiting (Development - Less restrictive)
 RATE_LIMIT_WINDOW_MS=300000
