--- a/backend/.env.production
+++ b/backend/.env.production
@@ -28,8 +28,8 @@ EMAIL_USER=noreply@yourdomain.com
 EMAIL_PASS=your_email_password
 EMAIL_FROM=MamaCare <noreply@yourdomain.com>
 
-# CORS Configuration (Restrict to your domains)
-CORS_ORIGIN=https://yourdomain.com,https://admin.yourdomain.com,https://api.yourdomain.com
+# CORS Configuration (Include your Vercel frontend domain)
+CORS_ORIGINS=https://mama-care-2m7mq1hws-talent5s-projects.vercel.app,https://mama-care.vercel.app,https://yourdomain.com,https://admin.yourdomain.com
 
 # Rate Limiting (Stricter for production)
 RATE_LIMIT_WINDOW_MS=900000
