--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -18,7 +18,7 @@ services:
       - key: JWT_EXPIRE
         value: 7d
       - key: CORS_ORIGINS
-        value: https://mama-care-g7y1.onrender.com,https://mamacare-admin.onrender.com,https://localhost:3000,http://localhost:3000,https://localhost:5173,http://localhost:5173
+        value: https://mama-care-2m7mq1hws-talent5s-projects.vercel.app,https://mama-care.vercel.app,https://mama-care-g7y1.onrender.com,https://mamacare-admin.onrender.com,https://localhost:3000,http://localhost:3000,https://localhost:5173,http://localhost:5173
       - key: MAX_FILE_SIZE
         value: 10485760
       - key: UPLOAD_PATH
