--- a/admin-dashboard/.env.development
+++ b/admin-dashboard/.env.development
@@ -1,7 +1,7 @@
 # Environment Configuration for MamaCare Admin Dashboard (DEVELOPMENT)
 
 # API Configuration - LOCAL BACKEND
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5000
 
 # App Configuration
 VITE_APP_NAME=MamaCare Admin Dashboard (DEV)
