--- a/admin-dashboard/.env.production
+++ b/admin-dashboard/.env.production
@@ -1,7 +1,7 @@
 # Environment Configuration for MamaCare Admin Dashboard (PRODUCTION)
 
 # API Configuration - PRODUCTION BACKEND
-VITE_API_URL=https://mama-care-g7y1.onrender.com/api
+VITE_API_URL=https://mama-care-g7y1.onrender.com
 
 # App Configuration
 VITE_APP_NAME=MamaCare Admin Dashboard
