Clean project for production deployment
- Remove development/test files and documentation
- Clean debug console.log statements
- Update .gitignore to include .env.production files
- Add production environment configurations
- Remove temporary build scripts and development tools
- Prepare codebase for deployment

--- a/MamaCare/eas.json
+++ b/MamaCare/eas.json
@@ -20,11 +20,19 @@
       }
     },
     "production": {
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "https://mama-care-g7y1.onrender.com/api",
+        "EXPO_PUBLIC_ENVIRONMENT": "production"
+      },
       "android": {
         "buildType": "app-bundle"
       }
     },
     "production-apk": {
+      "env": {
+        "EXPO_PUBLIC_API_BASE_URL": "https://mama-care-g7y1.onrender.com/api",
+        "EXPO_PUBLIC_ENVIRONMENT": "production"
+      },
       "android": {
         "buildType": "apk"
       }
