--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,13 @@ yarn-error.log*
 # Environment variables
 .env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Include production environment files for deployment
+!.env.production
 
 # Build outputs
 dist/
