--- a/MamaCare/app.json
+++ b/MamaCare/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "MamaCare",
     "slug": "MamaCare",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "mamacare",
@@ -18,7 +18,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.boikeys5.mamacare"
+      "package": "com.boikeys5.mamacare",
+      "versionCode": 2
     },
     "web": {
       "bundler": "metro",
