--- a/MamaCare/package.json
+++ b/MamaCare/package.json
@@ -6,8 +6,8 @@
     "start": "node scripts/dev-helper.js && expo start",
     "dev": "node scripts/dev-helper.js && expo start --clear",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "build:development": "eas build --profile development",
@@ -30,7 +30,6 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.5",
-    "eas-cli": "^16.17.4",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
