feat: Remove unused resources and update app configuration
- Deleted unused image assets for launcher icons across various mipmap folders.
- Removed empty color resources and styles from XML files.
- Updated app.json to change the app version and icon, and modified adaptive icon properties.
- Refactored authentication logic in AuthGuard to simplify checks and improve error handling.
- Introduced a new Logo component for consistent logo rendering across screens.
- Enhanced DashboardScreen and ProfileScreen to utilize the new user utility functions for better user data handling.
- Added user utility functions for consistent user data retrieval and conversion.
- Updated TypeScript configuration to skip library checks for smoother development.

--- a/MamaCare/.gitignore
+++ b/MamaCare/.gitignore
@@ -10,13 +10,16 @@ web-build/
 expo-env.d.ts
 
 # Native
-.kotlin/
 *.orig.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+
+# Native project folders (using CNG/Prebuild)
+/android
+/ios
 
 # Metro
 .metro-health-check*
